# godo

./: Cargo.toml  LICENSE  README.md
docs/: REQUIREMENTS.md
src/: cli.rs  commands.rs  config.rs  error.rs  main.rs  storage.rs  task.rs
